# codegraph

./: .gitignore  INSTALL.md  NOTICE  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
codegraph/: __init__.py  graph.py  hook.py  indexer.py  languages.py  parser.py  server.py  store.py  watch.py
install/: codegraph-police.sh  codegraph-reindex.md  codegraph-watch.sh  merge_config.py  uninstall.sh
tests/: hookcheck.py  test_codegraph.py
tests/fixtures/ambig_callers/: a.py
tests/fixtures/callee_shadow/: a.js  defs.py  other.py  p.php  r.rb  use.py
tests/fixtures/class_shadow/: a.py
tests/fixtures/construct_semantics/: factory.php  gen.py  models.rb
tests/fixtures/dollar_vars/: a.js
tests/fixtures/ext_token_method/: a.py
tests/fixtures/free_class_collision/: app.py  factory.py  legacy.js  model.py  modern.js  use.js  wcls.php  wfn.php  wuse.php
tests/fixtures/go/: main.go
tests/fixtures/graph_paths/: p.py
tests/fixtures/js/: app.js  mod.js
tests/fixtures/jsx_target/: Btn.jsx
tests/fixtures/like_escape/: a_b.php  axb.php
tests/fixtures/module_qualified/: app.py
tests/fixtures/php/: shop.php  util.php
tests/fixtures/py/: api.py  core.py
tests/fixtures/py_celery_routes/: api.py  collide_a.py  collide_b.py  tasks.py  urls.py  urls_attr.py  views.py
tests/fixtures/py_signals/: app.py
tests/fixtures/rb/: svc.rb
tests/fixtures/rb_mixin/: worker.rb
tests/fixtures/regression/: repoint.py  typeinfer.go
tests/fixtures/rn_components/: App.tsx  DungeonView.tsx  GameScreen.tsx  apiConfig.ts
tests/fixtures/ts/: base.ts
(+18 files in other folders)
